# password-manager

./: Cargo.toml  passwords.json
src/: functions.rs  main.rs
