[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.14"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rust-crypto = "0.2"
arboard = "3.3.0"
